--- a/detail.html
+++ b/detail.html
@@ -134,8 +134,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
-    <script src="./javascript/DetailPage.js"></script>
-    <script src="./javascript/DarkMode.js"></script>
+        <script src="./assets/js/DetailPage.js"></script>
+        <script src="./assets/js/DarkMode.js"></script>
     <!-- End-Script -->
 </body>
 
