--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- FontAwesome -->
 </head>
 
-<body onload="">
+<body onload="init()">
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg shadow-sm ">
         <div class="container justify-content-between py-3">
@@ -41,7 +41,7 @@
                     <span class="input-group-text border-0 py-3" id="inputGroup-sizing-default"><i
                             class="fa-solid fa-magnifying-glass ps-4"></i>
                     </span>
-                    <input type="text"id="input" placeholder="Search for a country" class="form-control"
+                    <input type="text" id="input" placeholder="Search for a country" class="form-control"
                         aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                 </div>
             </div>
@@ -51,10 +51,11 @@
                 <div class="dropdown-container shadow-sm">
                     <div class="dropdown">
                         <button class="btn dropdown-btn btn-lg dropdown-toggle justify-content-between" type="button"
-                             data-bs-toggle="dropdown" aria-expanded="false" id="dropdownButton">
+                            data-bs-toggle="dropdown" aria-expanded="false" id="dropdownButton">
                             Filter by region
                         </button>
-                        <ul class="dropdown-menu w-100 mt-1 p-3" aria-labelledby="dropdownMenuButton1" id="dropdownMenu">
+                        <ul class="dropdown-menu w-100 mt-1 p-3" aria-labelledby="dropdownMenuButton1"
+                            id="dropdownMenu">
                             <li><a class="dropdown-item">No Filter</a></li>
                             <li><a class="dropdown-item">Africa</a></li>
                             <li><a class="dropdown-item">Americas</a></li>
@@ -95,8 +96,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <script src="./javascript/HomePage.js"></script>
-    <script src="./javascript/DarkMode.js"></script>
+    <script src="./assets/js/HomePage.js"></script>
+    <script src="./assets/js/DarkMode.js"></script>
 </body>
 
 </html>
