--- a/detail.html
+++ b/detail.html
@@ -46,7 +46,7 @@
     </div>
 
     <!-- Content -->
-    <div class="container px-4 px-lg-0 my-4" id="cardContainer">
+    <div class="container px-4 px-lg-0 my-4 d-none" id="contentContainer">
         <div class="row justify-content-between align-items-center">
             <div class="col-lg-5 col-12 mb-5">
                 <img class="img-fluid" src="" id="flag">
@@ -124,8 +124,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
-    <script type="module" src="./assets/js/main/DetailPage.js"></script>
-    <script type="module" src="./assets/js/themes/DarkMode.js"></script>
+    <script type="module" src="./assets/js/DetailPage.js"></script>
+    <script type="module" src="./assets/js/DarkMode.js"></script>
     <!-- End-Script -->
 </body>
 
