--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <script type="module" src="./assets/js/main/HomePage.js"></script>
-    <script type="module" src="./assets/js/themes/DarkMode.js"></script>
+    <script type="module" src="./assets/js/HomePage.js"></script>
+    <script type="module" src="./assets/js/DarkMode.js"></script>
 </body>
 
 </html>
