--- a/detail.html
+++ b/detail.html
@@ -124,7 +124,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
-    <script type="module" src="./assets/js/app.js"></script>
+    <script type="module" src="./assets/js/DarkMode.js"></script>
     <script type="module" src="./assets/js/DetailPage.js"></script>
     <!-- End-Script -->
 </body>
